Fixed some exception handling logic